Correction 1ere version switch de JS

--- a/Accueil.html
+++ b/Accueil.html
@@ -27,6 +27,23 @@
       </div>
 </div>
 
+<div id="accueil">
+   <p>Bienvenue sur le site de La Forestière</p>
+</div>
+
+<div id="village">
+   <p>Quelques infos sur le village</p>
+</div>
+
+<div id="mairie">
+   <p>Informations sur la mairie</p>
+</div>
+
+<div id="demarches">
+   <p>Vos démarches ici !</p>
+</div>
+
+
 <div id="contact">
 
    <form action="#" method="post">
