--- a/Accueil.html
+++ b/Accueil.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="police/police.css" />
 </head>
+
 <body>
+   <div id="bloc_page">
+
+<!-- ----------------------------------------------BANDEAU---------------------------------------------------- -->
 
 <div id="bandeau">
 
@@ -16,8 +20,6 @@
 
       <div id="navigation">
          <ul>
-            <!-- <div id="Accueil"><li><a style="text-decoration:none" href="Accueil.php">Accueil</a></li></div> -->
-            
             <div id="btnAccueil"><li>Accueil</li></div>
             <div id="btnVillage"><li>Le Village</li></div>
             <div id="btnMairie"><li>Mairie</li></div>
@@ -27,22 +29,30 @@
       </div>
 </div>
 
+<div id="corps">
+
+<!-- -------------------------------------------------ACCUEIL----------------------------------------------------- -->
 <div id="accueil">
    <p>Bienvenue sur le site de La Forestière</p>
+   <img src="ressources/accueil.jpg"></img>
 </div>
 
+<!-- --------------------------------LE VILLAGE-------------------------------------- -->
 <div id="village">
    <p>Quelques infos sur le village</p>
 </div>
 
+<!-- --------------------------------LA MAIRIE-------------------------------------- -->
 <div id="mairie">
    <p>Informations sur la mairie</p>
 </div>
 
+<!-- --------------------------------VOS DEMARCHES-------------------------------------- -->
 <div id="demarches">
    <p>Vos démarches ici !</p>
 </div>
 
+<!-- --------------------------------CONTACT-------------------------------------- -->
 
 <div id="contact">
 
@@ -65,6 +75,20 @@
    </form>
   
 </div>
+
+</div> <!-- fin corps -->
+
+<!-- -------------------------------Footer--------------------------------------- -->
+
+</div> <!-- Fin du Bloc_Page-->
+
+   <div id="footer">
+
+      <h3>Mairie de La Forestière 51120 La Forestière</h3>
+      <p>Tél./Fax : <strong>03 26 80 41 64 </strong>      Email : mairiedelaforestiere@wanadoo.fr </br>
+      Ouverture au public : JEUDI de 10 h à 13 h     Permanence du Maire  : SAMEDI de 10 h à 12 h </p>
+
+   </div>
 
 <script type="text/javascript" src="navigation.js"></script>
 </body>
