Lancement Script Demarches

--- a/Accueil.html
+++ b/Accueil.html
@@ -29,8 +29,6 @@
       </div>
 </div>
 
-<div id="corps">
-
 <!-- -------------------------------------------------ACCUEIL----------------------------------------------------- -->
 <div id="accueil">
    <p>Bienvenue sur le site de La Forestière</p>
@@ -49,7 +47,9 @@
 
 <!-- --------------------------------VOS DEMARCHES-------------------------------------- -->
 <div id="demarches">
-   <p>Vos démarches ici !</p>
+
+<div id="btnDemarches">Réalisez vos démarches en ligne</div>
+
 </div>
 
 <!-- --------------------------------CONTACT-------------------------------------- -->
@@ -76,8 +76,6 @@
   
 </div>
 
-</div> <!-- fin corps -->
-
 <!-- -------------------------------Footer--------------------------------------- -->
 
 </div> <!-- Fin du Bloc_Page-->
@@ -91,5 +89,6 @@
    </div>
 
 <script type="text/javascript" src="navigation.js"></script>
+<script type="text/javascript" src="demarches.js"></script>
 </body>
 </html>
