Premier menu Demarches en cours

--- a/Accueil.html
+++ b/Accueil.html
@@ -48,8 +48,21 @@
 <!-- --------------------------------VOS DEMARCHES-------------------------------------- -->
 <div id="demarches">
 
-<div id="btnDemarches">Réalisez vos démarches en ligne</div>
+   <div id="demarchesOnline">
 
+       <div id="choixDemarche"><h2>Quelle démarche souhaitez-vous réaliser ?</h2>
+               <img src="ressources/LogoActe.png" alt="Acte d'état civil" width="50" height="50">
+               <p>Demande d'acte d'état civil</p> 
+       </div>
+
+       <div id="menuActe1">
+               <div id="Naissance"><img src="ressources/logoNaissance.png"><figcaption> Acte de naissance</figcaption></div>
+               <div id="Mariage"><img src="ressources/logoMariage.png"><figcaption>Acte de mariage</figcaption></div>
+               <div id="Deces"><img src="ressources/logoDeces.png"><figcaption>Acte de décès</figcaption></div>
+       </div>
+
+   </div>
+   
 </div>
 
 <!-- --------------------------------CONTACT-------------------------------------- -->
