Script Navigation JS améliorée

--- a/Accueil.html
+++ b/Accueil.html
@@ -19,47 +19,39 @@
     height=125px/></div>
 
       <div id="navigation">
-         <ul>
-            <div class="btn"><div id="btnAccueil"><li>Accueil</li></div></div>
-            <div class="btn"><div id="btnVillage"><li>Le Village</li></div></div>
-            <div class="btn"><div id="btnMairie"><li>Mairie</li></div></div>
-            <div class="btn"><div id="btnDemarches"><li>Vos démarches</li></div></div>
-            <div class="btn"><div id="btnContact"><li>Contact</li></div></div>
+         <ul
+         >
+            <div id="Accueil" div class="btn"><li>Accueil</li></div>
+            <div id="Village" div class="btn"><li>Le Village</li></div>
+            <div id="Mairie" div class="btn"><li>Mairie</li></div>
+            <div id="Demarches" div class="btn"><li>Vos démarches</li></div>
+            <div id="Contact" div class="btn"><li>Contact</li></div>
          </ul>
       </div>
 
 </div>
 
 <!-- -------------------------------------------------ACCUEIL----------------------------------------------------- -->
-<div class="menu">
+<div id="ACCUEIL" div class="menu">
 
-   <div id="accueil">
       <p>Bienvenue sur le site de La Forestière</p>
       <img src="ressources/accueil.jpg"></img>
-   </div>
 
 </div>
 <!-- --------------------------------LE VILLAGE-------------------------------------- -->
-<div class="menu">
+<div id="VILLAGE" div class="menu">
 
-   <div id="village">
       <p>Quelques infos sur le village</p>
-   </div>
 
 </div>
 <!-- --------------------------------LA MAIRIE-------------------------------------- -->
-<div class="menu">
+<div id="MAIRIE" div class="menu">
 
-   <div id="mairie">
       <p>Informations sur la mairie</p>
-   </div>
 
 </div>
-
 <!-- --------------------------------VOS DEMARCHES-------------------------------------- -->
-<div class="menu">
-
-   <div id="demarches">
+<div id="DEMARCHES" div class="menu">
 
       <div id="demarchesOnline">
 
@@ -75,15 +67,10 @@
          </div>
 
       </div>
-      
-   </div>
 
 </div>
-
    <!-- --------------------------------CONTACT-------------------------------------- -->
-<div class="menu">
-
-   <div id="contact">
+<div id="CONTACT" div class="menu">
 
       <form action="#" method="post">
          <div>
@@ -102,11 +89,8 @@
             <button type="submit">Envoyer le message</button>
       </div>
       </form>
-   
-   </div>
 
 </div>
-
 <!-- -------------------------------Footer--------------------------------------- -->
 
 </div> <!-- Fin du Bloc_Page-->
