Début du projet Démarches

--- a/Accueil.html
+++ b/Accueil.html
@@ -53,20 +53,17 @@
 <!-- --------------------------------VOS DEMARCHES-------------------------------------- -->
 <div id="DEMARCHES" div class="menu">
 
-      <div id="demarchesOnline">
+   <h2>Quelle démarche souhaitez-vous réaliser ?</h2>
 
-         <div id="choixDemarche"><h2>Quelle démarche souhaitez-vous réaliser ?</h2>
-                  <img src="ressources/LogoActe.png" alt="Acte d'état civil" width="50" height="50">
-                  <p>Demande d'acte d'état civil</p> 
-         </div>
-
-         <div id="menuActe1">
-                  <div id="Naissance"><img src="ressources/logoNaissance.png"><figcaption> Acte de naissance</figcaption></div>
-                  <div id="Mariage"><img src="ressources/logoMariage.png"><figcaption>Acte de mariage</figcaption></div>
-                  <div id="Deces"><img src="ressources/logoDeces.png"><figcaption>Acte de décès</figcaption></div>
-         </div>
-
-      </div>
+   <div id="etatCivil" class="btnDemarche">
+      <input type="image" src="ressources/LogoActe.png" width="50" height="50"><figcaption>Demande d'acte d'état civil</figcaption>
+   </div>
+   
+   <div id="menuEtatCivil1" div class="menuDemarches">
+      <div id="Naissance" div class="btnDemarche"><img src="ressources/logoNaissance.png"><figcaption> Acte de naissance</figcaption></div>
+      <div id="Mariage" div class="btnDemarche"><img src="ressources/logoMariage.png"><figcaption>Acte de mariage</figcaption></div>
+      <div id="Deces" div class="btnDemarche"><img src="ressources/logoDeces.png"><figcaption>Acte de décès</figcaption></div>
+   </div>
 
 </div>
    <!-- --------------------------------CONTACT-------------------------------------- -->
@@ -103,7 +100,7 @@
 
    </div>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script type="text/javascript" src="navigation.js"></script>
-<script type="text/javascript" src="demarches.js"></script>
 </body>
 </html>
