Passage des démarches en Jquery

--- a/Demarches.html
+++ b/Demarches.html
@@ -7,6 +7,7 @@
     </div>
     
     <div id="menuEtatCivil1" div class="menuDemarches">
+       COUCOU
        <div id="Naissance" div class="btnDemarche"><img src="ressources/logoNaissance.png"><figcaption> Acte de naissance</figcaption></div>
        <div id="Mariage" div class="btnDemarche"><img src="ressources/logoMariage.png"><figcaption>Acte de mariage</figcaption></div>
        <div id="Deces" div class="btnDemarche"><img src="ressources/logoDeces.png"><figcaption>Acte de décès</figcaption></div>
