--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 <div id="bandeau">
 
    <div id="logo"><img src="Ressources/logo.png" alt="Logo La Forestière" title="Logo La Forestière" width=125px
-    height=125px/></div>
-
-      <div id="navigation">
-         <ul
-         >
-            <div id="Accueil" div class="btn"><li>Accueil</li></div>
-            <div id="Village" div class="btn"><li>Le Village</li></div>
-            <div id="Mairie" div class="btn"><li>Mairie</li></div>
-            <div id="Demarches" div class="btn"><li>Vos démarches</li></div>
-            <div id="Contact" div class="btn"><li>Contact</li></div>
-         </ul>
-      </div>
-
+    height=125px/>
+   
 </div>
+
+<div id="navigation">
+  <ul>
+   <div id="Accueil" div class="btn"><li>Accueil</li></div>
+   <div id="Village" div class="btn"><li>Le Village</li></div>
+   <div id="Mairie" div class="btn"><li>Mairie</li></div>
+   <div id="Demarches" div class="btn"><li>Vos démarches</li></div>
+   <div id="Contact" div class="btn"><li>Contact</li></div>
+  </ul>
+</div>
+
 
 <div id="main"></div>
 
