Optimisation Script Navigation/pages

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <ul>
                <div id="Accueil" div class="btn"><li>Accueil</li></div>
                <div id="Village" div class="btn"><li>Le Village</li></div>
-               <div id="Mairie" div class="btnMairie"><li>Mairie</li></div>
-               <div id="Demarches" div class="btnDemarche"><li>Vos démarches</li></div>
+               <div id="Mairie" div class="btn"><li>Mairie</li></div>
+               <div id="Demarches" div class="btn"><li>Vos démarches</li></div>
                <div id="Contact" div class="btn"><li>Contact</li></div>
             </ul>
          </div>
